--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -47,12 +47,10 @@
     <string name="theme">Motyw</string>
     <string name="default_">Domyślny</string>
     <string name="alternative">Alternatywny</string>
-    <string name="no_instructions">brak instrukcji</string>
     <string name="before_meal">przed posiłkiem</string>
     <string name="after_meal">po posiłku</string>
     <string name="time_before_meal">x minut przed posiłkiem</string>
     <string name="time_after">x godzin po leku y</string>
-    <string name="instruction_templates">Szablony instrukcji</string>
     <string name="instructions_label">Dodatkowe instrukcje (np. przed posiłkami)</string>
     <string name="export_csv">Eksportuj jako CSV</string>
     <string name="export_pdf">Eksportuj jako PDF</string>
@@ -78,7 +76,6 @@
     <string name="tuesday">Wtorek</string>
     <string name="thursday">Czwartek</string>
     <string name="weekend_mode_summary">Opóźnij powiadomienia w określone dni tygodnia do określonej godziny</string>
-    <string name="remind_on">Przypomnienie</string>
     <string name="cycle_pause_days">Wstrzymane dni</string>
     <string name="weekday_limited">Ograniczone do niektórych dni powszednich</string>
     <string name="reminders">Przypomnienia</string>
@@ -110,8 +107,6 @@
     <string name="icon">Ikona</string>
     <string name="every_day_of_month">Każdego dnia miesiąca</string>
     <string name="on_day_of_month">W %s miesiąca</string>
-    <string name="clear_all">Wyczyść wszystko</string>
-    <string name="select_all">Wybierz wszystko</string>
     <string name="never">Nigdy</string>
     <string name="day_of_month_limited">Ograniczone do niektórych dni w miesiącu</string>
     <string name="medicines_tab_description">Karta lekarstw</string>
@@ -233,4 +228,19 @@
     <string name="sort">Sortuj</string>
     <string name="high_and_alarm">Wysoki + Alarm</string>
     <string name="enable_notification_alarm_dialog">Aby umożliwić wyświetlanie przypomnień jako alarmów, włącz tę opcję dla MedTimer w następującym menu</string>
+    <string name="continuous">Ciągły</string>
+    <string name="daily">Codzienny</string>
+    <string name="daily_from_to">Dzienny interwał od %1s do %2s</string>
+    <string name="continuous_from">Ciągły interwał zaczynający się od %1s</string>
+    <string name="reminder_status">Status przypomnienia</string>
+    <string name="dosing_instructions">Instrukcje dawkowania</string>
+    <string name="interval_type">Typ interwału</string>
+    <string name="sample_instructions">Wypełnij przykładowymi instrukcjami</string>
+    <string name="daily_interval">Dzienny interwał</string>
+    <string name="daily_start_time">Dzienny czas rozpoczęcia</string>
+    <string name="daily_end_time">Dzienny czas zakończenia</string>
+    <string name="remind_on_weekdays">Przypominaj w dni powszednie</string>
+    <string name="remind_on_days_of_month">Przypominaj w dniach miesiąca</string>
+    <string name="start_date">Data początkowa</string>
+    <string name="end_date">Data końcowa</string>
 </resources>
