--- a/app/src/main/res/values-ta/strings.xml
+++ b/app/src/main/res/values-ta/strings.xml
@@ -54,12 +54,10 @@
     <string name="theme">கருப்பொருள்</string>
     <string name="default_">இயல்புநிலை</string>
     <string name="alternative">மாற்று</string>
-    <string name="no_instructions">வழிமுறைகள் இல்லை</string>
     <string name="before_meal">உணவுக்கு முன்</string>
     <string name="after_meal">உணவுக்குப் பிறகு</string>
     <string name="time_before_meal">ஃச் உணவுக்கு நிமிடங்கள்</string>
     <string name="time_after">ஃச் மெடிசினுக்குப் பிறகு ஒய்</string>
-    <string name="instruction_templates">அறிவுறுத்தல் வார்ப்புருக்கள்</string>
     <string name="instructions_label">கூடுதல் வழிமுறைகள் (எ.கா. உணவுக்கு முன்)</string>
     <string name="medicine_data">மருந்து தரவு</string>
     <string name="export_csv">காபிம ஆக ஏற்றுமதி</string>
@@ -86,7 +84,6 @@
     <string name="weekend_mode_summary">ஒரு குறிப்பிட்ட நேரம் வரை வாரத்தின் சில நாட்களில் அறிவிப்புகளை தாமதப்படுத்துங்கள்</string>
     <string name="custom">வழக்கம்…</string>
     <string name="advanced_settings">மேம்பட்ட அமைப்புகள்</string>
-    <string name="remind_on">நினைவூட்டு</string>
     <string name="every_day">தினமும்</string>
     <string name="cycle_pause_days">இடைநிறுத்த நாட்கள்</string>
     <string name="cycle_start_date">முதல் சுழற்சி தொடக்க</string>
@@ -137,8 +134,6 @@
     <string name="every_day_of_month">மாதத்தின் ஒவ்வொரு நாளும்</string>
     <string name="on_day_of_month">மாதத்தின் %s இல்</string>
     <string name="number_of_repetitions">மறுநிகழ்வு எண்ணிக்கை</string>
-    <string name="clear_all">அனைத்தையும் அழிக்கவும்</string>
-    <string name="select_all">அனைத்தையும் தெரிவுசெய்</string>
     <string name="never">ஒருபோதும்</string>
     <string name="medicines_tab_description">மருந்துகள் தாவல்</string>
     <string name="overview_tab_description">கண்ணோட்டம் தாவல்</string>
@@ -223,4 +218,19 @@
     <string name="sort">வகை</string>
     <string name="high_and_alarm">அதிகம் + அலாரம்</string>
     <string name="enable_notification_alarm_dialog">நினைவூட்டல்களை அலாரங்களாகக் காட்ட அனுமதிக்க, பின்வரும் மெனுவில் MedTimer-க்கு இதை இயக்கவும்</string>
+    <string name="continuous">தொடர்ச்சியான</string>
+    <string name="daily">தினசரி</string>
+    <string name="daily_from_to">தினசரி இடைவெளி %1s முதல் %2s வரை</string>
+    <string name="continuous_from">தொடர்ச்சியான இடைவெளி %1s இலிருந்து தொடங்குகிறது</string>
+    <string name="reminder_status">நினைவூட்டல் நிலை</string>
+    <string name="dosing_instructions">மருந்தளவு வழிமுறைகள்</string>
+    <string name="interval_type">இடைவெளி வகை</string>
+    <string name="sample_instructions">மாதிரி வழிமுறைகளுடன் நிரப்பவும்</string>
+    <string name="daily_interval">தினசரி இடைவெளி</string>
+    <string name="daily_start_time">தினசரி தொடக்க நேரம்</string>
+    <string name="daily_end_time">தினசரி முடிவு நேரம்</string>
+    <string name="remind_on_weekdays">வார நாட்களில் நினைவூட்டு</string>
+    <string name="remind_on_days_of_month">மாதத்தின் நாட்களில் நினைவூட்டு</string>
+    <string name="start_date">தொடக்க தேதி</string>
+    <string name="end_date">முடிவு தேதி</string>
 </resources>
